# Poopy

./: build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle  google-services.json
app/src/androidTest/java/com/example/poopy/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/mally/poopy/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: imageprocessing.cpp
app/src/main/java/com/example/poopy/: MainActivity.java
app/src/main/java/com/example/poopy/Cat/: AddCatActivity.java  CatSetActivity.java
app/src/main/java/com/example/poopy/account/: LoginActivity.java  SignActivity.java
app/src/main/java/com/example/poopy/utils/: Cat.java  DeleteActivity.java  ResultActivity.java
app/src/main/java/com/mally/poopy/: MainActivity.java
app/src/main/java/com/mally/poopy/Cat/: AddCatActivity.java  (+1 more)
app/src/main/res/drawable/: button_pressed.xml  button_unpressed.xml  buttons.xml  inputs.xml  pink_cursor.xml  rectangle.xml
app/src/main/res/layout/: activity_add_cat.xml  activity_camera.xml  activity_cat_set.xml  activity_delete.xml  activity_list.xml  activity_list_item.xml  activity_login.xml  activity_sign.xml  cat_choice_item.xml  fragment_cam.xml  fragment_cat_choice.xml  fragment_home.xml  fragment_plus.xml  loading.xml  result.xml
app/src/main/res/menu/: bottom_nav_menu.xml
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/test/java/com/example/poopy/: ExampleUnitTest.java
app/src/test/java/com/mally/poopy/: ExampleUnitTest.java
(+38 files in other folders)
